# danbooru-tag-bot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  test.yml
migrations/2022-05-18-223723_create_subscriptions/: up.sql
migrations/2022-05-19-022527_create_post_index/: down.sql  up.sql
src/: api.rs  bot.rs  db.rs  main.rs  notifier.rs  schema.rs
src/db/: mod.rs  models.rs
